--- a/css/styles.css
+++ b/css/styles.css
@@ -649,6 +649,7 @@ footer {
 
 .join-content {
   margin-left: 70px;
+  flex-grow: 1;
 }
 
 .footer-social-list {
@@ -714,7 +715,9 @@ justify-content: baseline;
 }
 
 .sign-button {
-  position: relative;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
   margin-left: 12px;
   width: 200px;
   height: 50px;
@@ -724,27 +727,19 @@ justify-content: baseline;
   padding: 0;
  
 }
-.sign-text {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  left: 29px;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 1.88;
-    text-align: center;
-    letter-spacing: 0.06em;
-    color: var(--primary-white-color);
+.sign-button__text {
+ font-weight: 700;
+ font-size: 16px;
+ line-height: 1.88;
+ text-align: center;
+ letter-spacing: 0.06em;
+ color: var(--primary-white-color);
 
 }
 
-.sign-icon {
+.sign-button__icon {
   fill: var(--primary-white-color);
   margin-left: 10px;
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  left: 138px;
 
  
 }
@@ -776,6 +771,9 @@ justify-content: baseline;
   padding: 40px;
 }
 .modal-close {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: absolute;
   width: 30px;
   height: 30px;
@@ -784,13 +782,11 @@ justify-content: baseline;
   background: var(--primary-white-color);
   border: 1px solid rgba(0, 0, 0, 0.1);
   box-sizing: border-box;
+  border-radius: 50%;
 }
 .modal-icon {
-  position: absolute;
   width: 18px;
   height: 18px;
-  right: 5px;
-  top: 5px;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-icon:hover,
@@ -876,7 +872,13 @@ border-color: var(--accent-color);
   transform: translateY(-50%);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+.modal-field--indent {
+  margin-bottom: 30px;
+  margin-top: 10px;
+}
 .modal-comment {
+  display: block;
   width: 100%;
   height: 120px;;
   border: 1px solid rgba(33, 33, 33, 0.2);
@@ -906,7 +908,8 @@ border-color: var(--accent-color);
  }
 
 
- .checkbox-span {
+ .checkbox-link {
+   margin-left: 3px;
   color: var(--accent-color);
   text-decoration: underline;
   font-size: 14px;
